-added nav bar exercise

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 
 <body>
-  <nav></nav>
+  <nav>
 
-  <header></header>
-  <ul class="top">
-    <li class="block">1</li>
-    <li class="block">2</li>
-    <li class="block">3</li>
-  </ul>
 
+    <header></header>
+    <ul class="top">
+      <li class="block"><a>link1</a></li>
+      <li class="block"><a>link2</a></li>
+      <li class="block"><a>link3</a></li>
+    </ul>
+
+  </nav>
   <span class="inline">X</span>
   <span class="inline">Y</span>
   <span class="inline">Z</span>
